Fix the layout issues related to `CodeEditor` in the UI

--- a/ui/src/components/style/Filters.module.sass
+++ b/ui/src/components/style/Filters.module.sass
@@ -4,9 +4,6 @@
     display: flex
     flex-direction: row
     align-items: center
-    min-height: 3rem
-    overflow-y: hidden
-    overflow-x: auto
     padding: .5rem 0
     border-bottom: 1px solid #BCC6DD
     margin-right: 20px
